# cosmos-web-core

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_dist  README
scripts/: build_docker_image  do_cmake_emcc
source/: CMakeLists.txt  cosmos_web_core_bindings.cpp
